<resources>
    <string name="app_name">BMI Weight Calculator</string>
    <string name="height">قد</string>
    <string name="weight">وزن</string>
    <string name="calculate">محاسبه</string>
    <string name="height_input">قد (سانتی متر)</string>
    <string name="weight_input">وزن (کیلو گرم)</string>
    <string name="result">نتیجه</string>
    <string name="tv_Bmi_Status">شاخص توده بدنی شما</string>

    <!-- Toast Warning -->
    <string name="warn">لطفا مقدار صحیح را وارد کنید.</string>

    <!-- Recommendation -->
    <string name="under_Weight_Recommendation">وزن تان را افزایش دهید.</string>
    <string name="under_Weight">شما دچار کمبود وزن هستید</string>
    <string name="normal_Weight_Recommendation">نیازی به حساسیت روی وزن ندارید.</string>
    <string name="normal_Weight">شما وزنی طبیعی دارید</string>
    <string name="fat_Recommendation">نسبت به کاهش چربی اقدام کنید.</string>
    <string name="fat">شما دچار اضافه وزن هستید</string>
    <string name="very_fat_Recommendation">نسبت به کاهش چربی با مشورت متخصص اقدام کنید.</string>
    <string name="very_fat">شما دچار چاقی هستید، خطرناک برای سلامتی</string>

    <!-- About -->
    <string name="aboutBmi">
        شاخص حجم بدن فرمولی است
         برای نشان دادن میزان حجم بدن و دقیق ترین معیار جهانی چاقی است
        با استفاده از این مقیاس می توانید متوجه شوید که آیا دچار کمبود وزن هستید، اضافه وزن دارید و یا اینکه طبیعی هستید!

    </string>


</resources>
