<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_Calc"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425"
        >

        <EditText
            android:id="@+id/edt_Height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/height_input"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_Height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            app:layout_constraintBottom_toBottomOf="@+id/edt_Height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edt_Height"
            app:layout_constraintTop_toTopOf="@+id/edt_Height" />

        <EditText
            android:id="@+id/edt_Weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/weight_input"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_Height" />

        <TextView
            android:id="@+id/tv_Weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            app:layout_constraintBottom_toBottomOf="@+id/edt_Weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edt_Weight"
            app:layout_constraintTop_toTopOf="@+id/edt_Weight" />

        <Button
            android:id="@+id/btn_Calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"
            android:text="@string/calculate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_Weight" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_Result"
        android:layout_width="match_parent"
        android:layout_height="383dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_Calc"
        >

        <TextView
            android:id="@+id/tv_Result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/result"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@id/tv_Result" />

        <ImageView
            android:id="@+id/img_Body_icons"
            android:layout_width="137dp"
            android:layout_height="289dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/layout_Result"
            app:layout_constraintEnd_toEndOf="@id/layout_Result"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintVertical_bias="0.619"
            app:srcCompat="@drawable/ic_normal_weight" />

        <TextView
            android:id="@+id/tv_Body_Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:text="@string/weight_and_height"
            app:layout_constraintEnd_toStartOf="@+id/img_Body_icons"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />


        <TextView
            android:id="@+id/tv_BMI_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/tv_Bmi_Status"
            android:textColor="@color/colorGreen"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/img_Body_icons"
            app:layout_constraintHorizontal_bias="0.853"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_Body_Info" />

        <TextView
            android:id="@+id/tv_BMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="BMI"
            android:textColor="@color/colorGreen"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_BMI_subject"
            app:layout_constraintEnd_toStartOf="@+id/tv_BMI_subject"
            app:layout_constraintHorizontal_bias="0.807"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_BMI_subject"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_Recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="50dp"
            android:ems="12"
            android:text="@string/test"
            app:layout_constraintBottom_toBottomOf="@id/tv_Body_Status"
            app:layout_constraintEnd_toStartOf="@+id/img_Body_icons"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_Body_Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/img_Body_icons"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>